# esp8266_openrtos_standalone

./: CMakeLists.txt  CrossCompiler.cmake  FreeRTOSConfig.h  mainUser.c  storage.c  storage.h
httpd/: CMakeLists.txt
httpd/fsdata/: fsdata.c
httpd/fsdata/fs/: about.html  index.ssi  settings.html  status.html  websockets.html
httpd/fsdata/fs/css/: siimple.min.css  style.css
httpd/fsdata/fs/js/: smoothie_min.js
mbedtls/: CMakeLists.txt
spiffs/: CMakeLists.txt
