cmake_minimum_required(VERSION 3.10)
project(esp8266_spiffs)


set(CMAKE_CXX_STANDARD 11)

file(GLOB LIB_mbedtls_SRC
        ${ESP_OPEN_RTOS_DIR}/extras/mbedtls/*.c
        ${ESP_OPEN_RTOS_DIR}/extras/mbedtls/mbedtls/library/*.c
        )
list(FILTER LIB_mbedtls_SRC EXCLUDE REGEX ".*net_sockets.c$")

add_library(mbedtls STATIC ${LIB_mbedtls_SRC})

target_compile_options(mbedtls PUBLIC -Wno-error=unused-but-set-variable -Wno-error=unused-variable ${COMMON_FLAGS} )

target_include_directories(mbedtls PUBLIC
            ${ESP_OPEN_RTOS_DIR}/extras/mbedtls/include
            ${ESP_OPEN_RTOS_DIR}/extras/mbedtls/mbedtls/include
            ${ESP_OPEN_RTOS_DIR}/include
            ${ESP_OPEN_RTOS_DIR}/libc/xtensa-lx106-elf/include
            ${FREE_RTOS}/include
            ${FREE_RTOS}/portable/esp8266
            ${LWIP_DIR}/include
            ${ESP_OPEN_RTOS_DIR}/lwip/include
            ${LWIP_DIR}/include/compat/posix
            ${LWIP_DIR}/include/ipv4
            ${LWIP_DIR}/include/ipv4/lwip
            ${LWIP_DIR}/include/lwip
            ${ESP_OPEN_RTOS_DIR}/core/include
            ${ESP_OPEN_RTOS_DIR}/open_esplibs/include
            )